--- a/main.css
+++ b/main.css
@@ -231,6 +231,19 @@ a:hover {
   color: lightblue;
 }
 
-#desc h1 {
-  font-size: 4rem;
+/* If the screen size is 601px wide or more, set the font-size of <div> to 80px */
+@media screen and (min-width: 601px) {
+  #desc h1 {
+    font-size: 1.5rem;
+  }
 }
+
+/* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+@media screen and (max-width: 600px) {
+ #desc h1 {
+    font-size: 2rem;
+  }
+}
+
+
+
