--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ body {
   perspective: 500px;
   perspective-origin: 50% calc(50% - 150px);
   overflow: auto;
-  padding-top: 50px;
+  padding-top: 20px;
 }
 
 .scene {
@@ -224,6 +224,10 @@ body {
   font-size: 1.5rem;
 }
 
+#desc h1 {
+  font-size: 4rem;
+}
+
 a {
   color: aliceblue;
 }
@@ -233,14 +237,14 @@ a:hover {
 
 /* If the screen size is 601px wide or more, set the font-size of <div> to 80px */
 @media screen and (min-width: 601px) {
-  #desc h1 {
-    font-size: 1.5rem;
+  #desc a {
+    font-size: 1.3rem;
   }
 }
 
 /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
 @media screen and (max-width: 600px) {
-  #desc h1 {
+  #desc a {
     font-size: 2rem;
   }
 }
