--- a/main.css
+++ b/main.css
@@ -237,14 +237,14 @@ a:hover {
 
 /* If the screen size is 601px wide or more, set the font-size of <div> to 80px */
 @media screen and (min-width: 601px) {
-  #desc a {
-    font-size: 1.3rem;
+  #index a {
+    font-size: 1.5rem;
   }
 }
 
 /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
 @media screen and (max-width: 600px) {
-  #desc a {
+  #index a {
     font-size: 2rem;
   }
 }
