--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #000;
+  background-color: rgb(29, 32, 71);
   color: #fff;
   min-height: 70vh;
   display: grid;
@@ -201,7 +201,6 @@ body {
   position: absolute;
   width: 400px;
   height: 400px;
-  background-image: linear-gradient(90deg, #000a, #0004, #000a);
   transform: translate(-50%, -50%);
 }
 
@@ -219,8 +218,11 @@ body {
   color: white;
 }
 
-#desc p {
+#desc {
   max-width: 800px;
+}
+
+#desc p {
   font-size: 1.5rem;
 }
 
@@ -235,16 +237,42 @@ a:hover {
   color: lightblue;
 }
 
-/* If the screen size is 601px wide or more, set the font-size of <div> to 80px */
+/* If the screen size is 601px wide or more*/
 @media screen and (min-width: 601px) {
   #index {
     font-size: 1.5rem;
   }
 }
 
-/* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+/* If the screen size is 600px wide or less*/
 @media screen and (max-width: 600px) {
   #index {
     font-size: 2.5rem;
   }
+  .scene {
+    padding-top: 100px;
+  }
+}
+
+div.gallery {
+  margin: 10px;
+  border: 5px solid rgba(132, 0, 255, 0.8);
+  float: left;
+  width: 360px;
+}
+div.gallery:hover {
+  border: 5px solid rgb(209, 131, 255);
+  box-shadow: 5px 5px #fff;
+}
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+
+.work-post {
+  max-width: 800px;
 }
